--- a/src/app/shared/components/navbar/navigation.component.scss
+++ b/src/app/shared/components/navbar/navigation.component.scss
@@ -70,3 +70,35 @@ ion-icon {
 
 
 
+.sidenav-container {
+  border: 1px solid red;
+  
+}
+
+.sidenav {
+  position: absolute;
+  z-index: 10;
+  height: 100vh;
+  width: 200px;
+  border: 1px solid blue;
+  padding: 10px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
+// .sidenav {
+//   position: absolute;
+//   top: 10px;
+//   bottom: 60px;
+//   left: 0;
+//   right: 0;
+// };
+
+// .sidenav__content {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 200px;
+//   background: rgba(255, 0, 0);
+
+// }
