--- a/src/app/shared/components/movie-detail/movie-detail.component.html
+++ b/src/app/shared/components/movie-detail/movie-detail.component.html
@@ -26,10 +26,10 @@
           <h3 class="movie-card__subtitle">Director</h3>
           <p class="movie-card__info-text">{{Movie.director}}</p>
         </div>
-        <div class="movie-card__info-item">
+        <!-- <div class="movie-card__info-item">
           <h3 class="movie-card__subtitle">Fecha de estreno</h3>
           <p class="movie-card__info-text">{{Movie.estreno}}</p>
-        </div>
+        </div> -->
         <div class="movie-card__info-item">
           <h3 class="movie-card__subtitle">Plataformas</h3>
           <img class="movie-card__plataform-logo" src="assets/svg/netflix.svg" alt="logo de netflix">
@@ -89,4 +89,4 @@
       <button class="movie-card__button"></button>
     </mat-card-actions> -->
   <!-- </section> -->
-<!-- </mat-card> --> -->
+<!-- </mat-card> --> 
