--- a/src/app/features/user/user-configuration/user-configuration.component.scss
+++ b/src/app/features/user/user-configuration/user-configuration.component.scss
@@ -62,7 +62,7 @@
 }
 
 .expansion {
-  --mat-expansion-container-background-color: #252525;
+  --mat-expansion-container-background-color: transparent;
 
   &__title {
     font-size: 14px;
@@ -92,4 +92,48 @@ ion-icon{
 
 .mdc-form-field>label {
   color: red;
+}
+
+.test {
+  background: none;
+  border: none;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #161718;
+  }
+
+  &__div2 {
+    padding: 10px;
+  }
+  &__div {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+  }
+  &__p1 {
+    font-size: 15px;
+    color: #E7E9EA;
+    margin: 0;
+    font-weight: 400;
+  }
+
+  &__p2 {
+    font-size: 13px;
+    color: #71767B;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+
+  }
+
+  &__arrow {
+    color: #71767B;
+    font-size: 20px;
+  }
+
 }
