--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -4,7 +4,7 @@
       <img class="user__img--image" src="assets/porfile.jpg" alt="">
     </div>
     <div class="user__info">
-      <p class="user__name">Usuario Demo</p>
+      <p class="user__name">{{username}}</p>
       <p class="user__mail">{{mail}}</p>
     </div>
   </header>
