--- a/src/app/features/home/movie-explorer/movie-explorer.component.scss
+++ b/src/app/features/home/movie-explorer/movie-explorer.component.scss
@@ -8,7 +8,7 @@
   .scroll {
     width: 100%;
     height: 72px;
-    border: 1px solid white;
+    border: 1px solid rgba(128, 128, 128, .3);
     padding: 16px;
     display: flex;
     border-radius: 6px;
