feature: added a user settings component

--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -20,7 +20,7 @@
       <ion-icon name="notifications-outline"></ion-icon>
       Notificaciones
     </button>
-    <button class="user__button" [routerLink]="['settings/porfile']">
+    <button class="user__button" [routerLink]="['/settings']">
       <ion-icon name="settings-outline"></ion-icon>      
       Configuración
     </button>
